添加对精妙背包的兼容